ouverture de l'api contenant les modèles, fix divers
